# twilight-client-sdk

./: .env.backup  .env.example  .gitignore  ACCOUNT_1_BALANCE.txt  ACCOUNT_2_BALANCE.txt  CHANGELOG.md  Cargo.toml  LICENSE  README.md  relayerprogram.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
examples/: basic.rs
migrations/2024-04-13-123456_create_orders/: down.sql  up.sql
migrations/2024-05-21-182321_create_orders/: up.sql
migrations/2024-05-23-052245_create_orders_limit/: up.sql
src/: bin.rs  chain.rs  db.rs  db_ops.rs  encrypted_account.rs  keys_management.rs  lib.rs  models.rs  programcontroller.rs  relayeclientrpc.rs  relayer.rs  relayer_types.rs  schema.rs  script.rs  test.rs  transfer.rs  util.rs  utxo_util.rs  zk_account.rs
src/agent/: auto_accounts.rs  auto_orders.rs  mod.rs
src/relayer_rpcclient/: id.rs  method.rs  mod.rs  order_test_hex.rs  txrequest.rs  utils.rs  version.rs
