[package]
name = "zkos-client-wallet"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zkoswalletlib"
path = "src/lib.rs"
#[bin]
#name = "zkoswalletbin"
#path = "src/bin.rs"
[profile.release]
debug = true
[dependencies]
curve25519-dalek = { version = "3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"
serde_json = "1.0.58"
bincode = "1.3.3"
hex = "0.4"
sha3 = "0.9.1"
sha2 = "0.10.7"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
aes = "0.7"
block-modes = "0.8"
#block-padding = "0.2"
lazy_static = "1.4.0"
dotenv = "0.15.0"
jsonrpc = "0.17.0"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde-this-or-that = "0.4.2"
[dependencies.zkvm]
git = "ssh://github.com/twilight-project/ZkOS.git"
branch = "develop"
[dependencies.transaction]
git = "ssh://github.com/twilight-project/ZkOS.git"
branch = "develop"
[dependencies.transactionapi]
git = "ssh://github.com/twilight-project/ZkOS.git"
branch = "develop"
[dependencies.address]
git = "ssh://github.com/twilight-project/ZkOS.git"
branch = "develop"
[dependencies.zkschnorr]
git = "ssh://github.com/twilight-project/ZkSchnorr.git"
[dependencies.quisquis-rust]
git = "ssh://github.com/twilight-project/quisquis-rust.git"
branch = "develop"
