[package]
name = "twilight-client-sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for interacting with the Twilight blockchain relayer"
license = "Apache-2.0"
repository = "https://github.com/twilight-project/twilight-client-sdk"
readme = "README.md"
keywords = ["blockchain", "crypto", "sdk", "twilight", "relayer"]
categories = ["cryptography", "api-bindings"]
[lib]
name = "twilight_client_sdk"
path = "src/lib.rs"
[[bin]]
name = "clientsdkbin"
path = "src/bin.rs"
[profile.release]
debug = true
[dependencies]
curve25519-dalek = { version = "3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres"] }
rand = "0.7"
serde_json = "1.0.58"
bincode = "1.3.3"
hex = "0.4"
sha3 = "0.9.1"
sha2 = "0.10.7"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
aes = "0.7"
block-modes = "0.8"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
# diesel = { version = "1.4.8", features = ["postgres"] } # Temporarily disabled
jsonrpc = "0.17.0"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde-this-or-that = "0.4.2"
[dependencies.zkvm]
git = "https://github.com/twilight-project/zkos-rust.git"
tag = "v0.0.1"
[dependencies.transaction]
git = "https://github.com/twilight-project/zkos-rust.git"
tag = "v0.0.1"
[dependencies.transactionapi]
git = "https://github.com/twilight-project/zkos-rust.git"
tag = "v0.0.1"
[dependencies.address]
git = "https://github.com/twilight-project/zkos-rust.git"
tag = "v0.0.1"
[dependencies.zkschnorr]
git = "https://github.com/twilight-project/zk-schnorr.git"
tag = "Testnet-v1.0.0"
[dependencies.quisquis-rust]
git = "https://github.com/twilight-project/quisquis-rust.git"
tag = "Testnet-v1.0.0"
